# Grocery-Tracker

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 15260d56ee49_fix_migration.py  1b37dfb1fec3_initial_migration.py  2a76c2744c25_allow_for_nullable_fields.py  571d8dba4578_initial_migration.py  a04d9bbf7588_check_migration.py  c71c7f2effea_update_for_date_migration.py
app/api/v1/endpoints/: analytics.py  orders.py  users.py
app/core/: config.py  security.py
app/db/: session.py
app/db/models/: __init__.py  budget.py  notification.py  order.py  user.py
app/schemas/: analytics.py  order.py  user.py
app/services/: analytics_service.py  order_service.py  user_service.py
app/utils/: openai.py
